--- a/wstrade.html
+++ b/wstrade.html
@@ -6,6 +6,7 @@
     <link href="//dbnet-public.s3.amazonaws.com/css/jquery.ui.themeswitcher.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.4/jquery.mousewheel.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/globalize.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.ja-JP.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.en-AU.js"></script>
@@ -471,6 +472,7 @@
                 var d = new Date(s.spot_time*1000);
                 var str = '<h2 class="livesym" symbol="' + s.symbol + '">'
                         + s.display_name + ": " + s.quoted_currency_symbol + " " + s.spot + "</h2>"
+                        + '<span class="spark"></span>'
                         + "<div>" + s.exchange_name + " &mdash; " + s.symbol + "</div>"
                         + "<div> as at " + d.toUTCString() + "</div>";
                 if (s.error) str += '<div class="ui-state-error">' + s.error + '</div>';
@@ -501,19 +503,21 @@
                         return;
                     }
                     var s = g.all_symbols[symbol];
-                    if (data.history) {
-                        s.history = data.history;
-                        console.log("sym info is now %o", s);
-                        return;
-                    }
-                    if (data.error) {
-                        s.error = data.error
-                    } else {
+                    if      (data.history) s.history = data.history;
+                    else if (data.error  ) s.error = data.error;
+                    else if (data.quote  ) {
                         delete s.error;
                         s.spot = data.quote;
                         s.spot_time = data.epoch;
+                        if (s.history) {
+                            s.history.prices.shift();
+                            s.history.prices.push(s.spot);
+                            s.history.times.shift();
+                            s.history.times.push(s.spot_time);
+                        }
                     }
                     $live_symbol.html(spot_report(s));
+                    if (s.history) $('.spark', $live_symbol).sparkline(s.history.prices, {height:'3em'});
                     return;
                 }
                 if (data.active_symbols) {
@@ -889,7 +893,7 @@
 
             function opensocket(opts) {
                 var handlers = {onclose:onclose,onmessage:onmessage,onopen:onopen};
-                var url = window.location.host == 'wstrade.binary.com'
+                var url = true || window.location.host == 'wstrade.binary.com'
                             ? 'wss://ws.binary.com/websockets/contracts'
                             : 'ws://www.devbin.io/websockets/contracts';
                 g.ws  = new WebSocket(url);
