--- a/wstrade.html
+++ b/wstrade.html
@@ -466,6 +466,7 @@
                 var symbol = $('h2.livesym', ui.tooltip).attr('symbol');
                 ui.tooltip.data('symbol', symbol);
                 g.$live_symbols[symbol] = ui.tooltip;
+                //g.ws.send(JSON.stringify({ticks:symbol, count:65, end:'latest', style: 'candles'}));
                 g.ws.send(JSON.stringify({ticks:symbol, count:65, end:'latest'}));
                 g.ws.send(JSON.stringify({ticks:symbol}));
                 ui.tooltip.draggable();
@@ -512,6 +513,13 @@
                 if (data.history) {
                     var symbol = data.ticks;
                     g.all_symbols[symbol].history = data.history;
+                    return;
+                }
+
+                if (data.candles) {
+                    var symbol = data.ticks;
+                    console.log("received candles data %o", data);
+                    g.all_symbols[symbol].candles = data.candles;
                     return;
                 }
 
